# FractalGen

./: .gitignore  CMakeLists.txt  ColorPalette.md  README.md  colorpalatte.md
src/: main.cpp
src/shaders/: frag.glsl  grayscale.frag  julia.frag  mandelbrot.frag
src/util/: config.cpp  config.hpp  event_handler.cpp  event_handler.hpp
